[tool.poetry]
name = "pubmed-paper-fetcher"
version = "0.1.0"
description = "Fetch PubMed papers with non-academic authors"
authors = ["Nalla Soumika <soumikanalla15@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.31.0"

[tool.poetry.scripts]
get-papers-list = "get-papers-list:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
